--- a/egpaper_final.tex
+++ b/egpaper_final.tex
@@ -27,7 +27,7 @@
 \def\httilde{\mbox{\tt\raisebox{-.5ex}{\symbol{126}}}}
 
 % custom commands
-\newcommand{\scream}[1]{{\color{red} \bf *** #1! ***}}
+\newcommand{\scream}[1]{{\color{red} \bf *** #1 ***}}
 
 % Pages are numbered in submission mode, and unnumbered in camera-ready
 %\ifcvprfinal\pagestyle{empty}\fi
@@ -73,7 +73,7 @@ First line of institution2 address\\
 \section{Related Works}
 \subsection{Whitened Histograms of Orientations (WHO)}
 % History of Whitening and how whitening works
-Recently, Hariharan \etal. introduced Whitened Histograms of Orientations (WHO) \cite{Hariharan12}, which used statistics from natural images to whiten HOG templates, making them more discriminative. Whitening is a common signal processing operation for decorrelating a set of random variables \cite{Martinsson05, Belouchrani00}. More formally, suppose that we have a $k$-dimensional random variable $X \in \mathcal{R}^k$ with $Cov(X)=\Sigma$. By whitening the signal, i.e., $\tilde{X}=\Sigma^{-\frac{1}{2}}(X - E[X])$, we remove 2nd order correlation between all features. So, all elements in the random variable $\tilde{X} = \left[\tilde{X}_1, \tilde{X}_2, \dots, \tilde{X}_k\right]$, become more independent. In the context of HOG features, a whitened HOG template will produce Gaussian noise when convolved with a random natural image, but a delta-like response on an image matching the template. WHO templates are more discriminative than standard HOG templates because they only capture the gradients that differentiate the object from random images.
+Recently, Hariharan \emph{et al.} introduced Whitened Histograms of Orientations (WHO) \cite{Hariharan12}, which used statistics from natural images to whiten HOG templates, making them more discriminative. Whitening is a common signal processing operation for decorrelating a set of random variables \cite{Martinsson05, Belouchrani00}. More formally, suppose that we have a $k$-dimensional random variable $X \in \mathcal{R}^k$ with $Cov(X)=\Sigma$. By whitening the signal, i.e., $\tilde{X}=\Sigma^{-\frac{1}{2}}(X - E[X])$, we remove 2nd order correlation between all features. So, all elements in the random variable $\tilde{X} = \left[\tilde{X}_1, \tilde{X}_2, \dots, \tilde{X}_k\right]$, become more independent. In the context of HOG features, a whitened HOG template will produce Gaussian noise when convolved with a random natural image, but a delta-like response on an image matching the template. WHO templates are more discriminative than standard HOG templates because they only capture the gradients that differentiate the object from random images.
 
 \textcolor{red}{Should we mention how our method improves on this (ie by using CG)?}
 
@@ -82,7 +82,7 @@ Recently, Hariharan \etal. introduced Whitened Histograms of Orientations (WHO) 
 
 \subsection{Object Detection and Viewpoint Estimation}
 
-Modern object detectors generalize very well, handling intraclass variability, occlusion, truncation and viewpoint changes \cite{Felzenszwalb10, Girshick14}. However, this generalization comes at the cost of fine-grained information, including accurate 3D pose and object sub-category recognition. Such methods typically produce bounding box detection hypotheses, will little further information.
+Modern object detectors generalize very well, handling intraclass variability, occlusion, truncation and viewpoint changes \cite{Felzenszwalb10, Girshick14}. However, this generalization comes at the cost of fine-grained information, including accurate 3D pose and object sub-category recognition. Such methods typically produce bounding box detection hypotheses, with little further information.
 
 Many methods have attempted to move object detection towards richer outputs, especially by jointly performing detection and pose estimation \cite{Pepik12, Xiang12, Fidler12, Xiang14, Hejrati14, Aubry14, Lim14}. To achieve this, \cite{Xiang12, Hejrati14, Fidler12} use 3D representations that deform as viewpoint changes and \cite{Pepik12} uses geometric constraints to regularize 2D appearance models.
 
@@ -120,9 +120,9 @@ More recently, \cite{Aubry14, Lim14} made progress in joint instance-level objec
 \section{2D-3D Matching using Non-Zero Whitened Histograms of Orientations(NZ-WHO)}
 \label{sec:nz-who}
 
-We propose Non-Zero Whitened Histograms of Orientations (NZ-WHO), an improvement over WHO, that are both more discriminative than WHO, and can be generated in 70ms (compared to several seconds for WHO). This speed up means we can generate templates on the fly, allowing our approach to evaluate arbitrary viewpoint hypotheses. 
+We propose Non-Zero Whitened Histograms of Orientations (NZ-WHO), that are both more discriminative than WHO, and can be generated in 70ms (compared to several seconds for WHO). This speed up means we can generate templates on the fly, allowing our approach to evaluate arbitrary viewpoint hypotheses. 
 
-The computational efficiency of our approach comes from using the iterative conjugate gradient method to whiten the HOG template. Whitening a feature vector $x$ requires a system of linear equations $\Sigma w = (x - \mu)$ to be solved, usually by decomposing the covariance matrix $\Sigma$ (with LU or Cholesky decomposition). Since the covariance matrices of HOG templates have nice spectral properties, we can use the conjugate gradient method to solve the system of linear equations several orders of magnitude faster than decomposition methods.
+The computational efficiency of our approach comes from using the iterative conjugate gradient method to whiten the HOG template. Whitening a feature vector $x$ requires a system of linear equations $\Sigma w = (x - \mu)$ to be solved, usually by decomposing the covariance matrix $\Sigma$ (with LU or Cholesky decomposition). Since the covariance matrices of HOG templates have nice spectral properties (see Section \ref{sec:fast_whitening}), the conjugate gradient method will converge to the solution several orders of magnitude faster than decomposition methods.
 
 Our second innovation is 'Non-Zero' whitening. When synthesizing detection templates from rendered images, a common problem is how to handle the background. Some methods \scream{which?} render the model over a natural image background, but this results in gradients in the background being incorporated into the discriminative template. Alternatively, we could leave the background textureless \scream{did Hariharan do this?} (see Fig.~\ref{fig:rendering}), but whitening the resulting HOG template produces in undesirable background artifacts. These are created when centering the template (by subtracting the mean $\mu$), where strong negative weights are introduced in the textureless region (as seen in Fig.~\ref{fig:whocomparison}). This could result in positive matches being suppressed due to spurious background gradients.
 
@@ -248,7 +248,7 @@ Synthesizing the covariance matrix is memory copy operations so we used GPU to s
 % \end{comment}
 
 \subsection{Fast Whitening and Non-Zero Selection}
-
+\label{sec:fast_whitening}
 \begin{figure}[t]
   \begin{center}
      \includegraphics[width=0.9\linewidth]{whiten_orig_depth} 
@@ -257,9 +257,7 @@ Synthesizing the covariance matrix is memory copy operations so we used GPU to s
   \label{fig:rendering}
   \end{figure}
  
-To whiten a signal $x$, we have to solve $\Sigma w = x - \mu$ which takes $O(n^3)$ time. In \cite{Hariharan12}, the authors make use of Positive Semi-Definite and Hermitian properties of a covariance matrix to use Cholesky decomposition and Gaussian elimination which is twice faster than LU decomposition.
-
-However, if we make use of a spectral property of the covariance matrix, we can further speed up the whitening stage.
+To whiten a signal $x$, we have to solve $\Sigma w = x - \mu$ which takes $O(n^3)$ time. In \cite{Hariharan12}, the authors make use of positive semidefinite and Hermitian properties of a covariance matrix to use Cholesky decomposition and Gaussian elimination which is twice as fast a the LU decomposition. However, if we make use of a spectral property of the covariance matrix, we can further speed up the whitening stage.
   
   If we use a high resolution template such as \ref{fig:rendering}
 
@@ -284,7 +282,6 @@ We also used iterative Conjugate Gradient to make use of low rank property of th
   \caption{Comparison of HOG variants generation time and final }
   \label{fig:whotime}
 \end{figure}
-
 [Figure spectral analysis]
 
 \begin{figure}[t]
@@ -296,25 +293,25 @@ We also used iterative Conjugate Gradient to make use of low rank property of th
 
 \subsection{Variations of WHO}
 
-We empirically found out that NZ-WHO performs reasonably well without time consuming calibration stage compare to other variational methods to generate templates. We used 1 CAD model with viewpoints covering 24 azimuths and 4 elevations with 250 cells per each template. Each template takes approximately 70 milliseconds to generate a NZ-WHO template. We also calibrated templates using the method presented in \cite{Aubry14}. Briefly, the calibration learns affine transformation of the detection confidence using a set of natural images.% Note that in Section \ref{experiments}, we provide the same experiment with 9 CAD models.
+We empirically found out that NZ-WHO performs reasonably well without time consuming calibration stage compare to other variational method to generate templates. We used 1 CAD model with viewpoints covering 24 azimuths and 4 elevations. Each template takes approximately 80 milliseconds to generate a NZ-WHO template. We also calibrated templates using the method presented in \cite{Aubry14}. The calibration learns affine transformation of the detection confidence.% Note that in Section \ref{experiments}, we provide the same experiment with 9 CAD models.
+
 
 \begin{table*}[!htbp]
     \begin{center}
-\begin{tabular}{|c|c|r|c|r|}
+\begin{tabular}{|c|c|c|c|c|}
 \hline
-Methods (AP/MPPE) & before calibration  & time & after Calibration \cite{Aubry14} & time \\
+Methods &  without Calibration (AP/AVP) & time & w/ Calibration \cite{Aubry14} (AP/AVP) & time \\
 \hline\hline
-HOG\cite{Dalal05}     & 72.3 / 65.0  &  31ms  & 60.4 / 50.2                 &   8.7 sec \\ 
-WHO\cite{Hariharan12} &              &  3811ms&                             &   12.4 sec  \\
-WHO-CG                & 81.7 / \texbf{84.9}  &  104ms &     83.7 / 87.3             &   8.3 sec \\
-WHO-CG-Z              & 54.4 / 65.1  &  103ms & \textbf{92.8} / 86.7 &   8.7 sec  \\
+HOG\cite{Dalal05}     & 72.28/48.38  &  31ms  & 60.37/50.19               &   8.7 sec \\ 
+WHO-Chol\cite{Hariharan12} &              &3811ms    &                           &   12.4 sec  \\
+WHO-GG                & 81.70/74.20  &104ms &     83.714/75.37              &   8.3 sec \\
+WHO-CG-Z              & 54.42/49.71  &103ms & \textbf{92.80}/\textbf{81.44} &   8.7 sec  \\
 % NZC-WHO-Z    & 89.10/\textbf{78.64} &    & 91.15/74.79                  &     \\
-NZ-WHO-CG        & \textbf{90.0} / 82.8 & 79ms & 90.3 / \textbf{86.8}                   &  8.5 sec   \\
+NZ-WHO-CG        & \textbf{90.00}/78.23 & 79ms & 90.31/78.00                   &  8.5 sec   \\
 \hline
 \end{tabular}
-\\\textcolor{red}{TABLE REQUIRES MODIFICATION}
 \end{center}
-\caption{Average Precision(AP) and Mean Precision in Pose Estimation (MPPE) \cite{Lopez-Sastre11} variations of WHO on 3DObject Car dataset\cite{Savarese07}. WHO refers to standard WHO using the method presented in \cite{Hariharan12}, WHO-CG uses iterative Conjugate Gradient method to generate WHO. WHO-CG-Z uses whiten the whole template and zero out textureless region. NZ-WHO-CG is the NZ-WHO which whitens only non-zero cells using iterative Conjugate Gradient method. The time column indicates the time to generate one template. We followed calibration procedure presented in \cite{Aubry14}.}
+\caption{Average Precision(AP) and Average Viewpoint Precision(AVP) \cite{Xiang14} of variations of WHO on 3DObject Car dataset\cite{Savarese07}. WHO\cite{Hariharan12} whitens all cell, WHO-ZZ whitens all cell then zero out textureless region. NZC-WHO-ZZ first substract mean $\mu$ on non-zero cells and whiten all cells then zero out textureless region. NZ-WHO whitens only non-zero cell. Note that WHO-ZZ got dramatic performance boost after calibration due to strong impact of substracting $\mu$ from all textureless region}
 \label{tab:who_initializations}
 \end{table*}
 
@@ -408,7 +405,6 @@ We implemented the convolution using FFT on GPU and got 10x speed up.
 %------------------------------------------------------------------------
 
 \section{Continuous Viewpoint and Focal Length Estimation for Fine Tuning}
-\label{sec:fine}
 
 % Estimating viewpoint continuously to fine tune a initial matching 
 Since creating a template and validating the template become computationally inexpensive, making a proposal and validating the proposal to fine tune a 2D-3D matching became affordable. We used Metropolis-Hastings algorithm to generate a proposal pose and focal length and validate the proposal using the convolution and returning maximum response as a return.
@@ -418,41 +414,22 @@ We modeled the distribution of the convolution as an exponential distribution an
 We run experiments on PASCAL 2007 car category images with at least one car (num images) and got x percent improvement after fine tuning.
 
 % there are several advantages that was not possible such as \textbf{on-the-fly} template generation and making large number of templates  
-
-
-\begin{figure}[t]
-\centering
-    \includegraphics[width=0.7\linewidth]{tuning2} \\ [-5pt]
-    \caption{Different modes of Metropolis Hasting proposals, see Section \ref{sec:fine}}
- \label{fig:tuningmode}
-\end{figure}
-    
 \begin{figure}[t]
  \begin{center}
-    \setlength\tabcolsep{0pt}
-    \begin{tabular}{ccc}
-    % \includegraphics[width=0.9\linewidth]{tuning} 
-   \includegraphics[width=0.33\linewidth]{tuning/1.png} &
-   \includegraphics[width=0.33\linewidth]{tuning/2.png} &
-   \includegraphics[width=0.33\linewidth]{tuning/3.png} \\[-5pt]
-   (a) & (b) & (c)\\
-   \includegraphics[width=0.33\linewidth]{tuning/4.png} &
-   \includegraphics[width=0.33\linewidth]{tuning/5.png} &
-   \includegraphics[width=0.33\linewidth]{tuning/6.png} \\[-5pt]
-   (d) & (e) & (f)\\
-   \end{tabular}
+    \includegraphics[width=0.9\linewidth]{tuning2} 
+    \includegraphics[width=0.9\linewidth]{tuning} 
  \end{center}
  \caption{Effect of fine tuning. (left) original image, (middle) initial detection, (right) continuous fine tuning}
  \label{fig:tuning}
 \end{figure}
  
+
+
 \section{Experiments}
 
-In this section, we validate our proposed NZ-WHO templates in two different ways. First, we make a set of NZ-WHO templates for a set of CAD models from various viewpoints. Then we run the bank of NZ-WHO templates as an ensemble of weak classifiers and show that our method can work as a standalone detector for simple task. This validates that our ensemble of NZ-WHO templates, though each of templates takes 70ms to generate from a rendering image, can robustly perform 2D-3D matching on real images. 
+In this section, we validate our proposed NZ-WHO templates in two different ways. First, we make a set of NZ-WHO templates for a set of CAD models from various viewpoints. Then we run the bank of NZ-WHO templates as ensembles of weak detectors and show that the rendering image can be We want to see how robust the NZ-WHO to real images a
 
-Then, we show that our method can complement  enrich object detection 
-
-\subsection{2D-3D Matching as an Object Detector} 
+\subsection{Object Detection} 
 Instance-level 2D-3D matching (registration) is a difficult problem since we need a CAD model that looks similar to the object in the image. Especially, due to extreme intraclass variability of chair \cite{Aubry14} used a very large collection of CAD models to cover variety of chairs. Similarly, \cite{Lim14}
 \begin{table}[!htbp]
   \begin{center}
@@ -508,52 +485,6 @@ Instance-level 2D-3D matching (registration) is a difficult problem since we nee
 High performance object detectors usually generalizes very well. It can handle various intraclass variability, viewpoint change and occlusion. However due to this high generalization, sometimes it is very difficult to get accurate pose, category or 2D-3D matching. Our method, specialized in giving such accurate information, can be applied on any generic object detectors to give high quality metadata.
 
 To show such ability, we evaluated our method on PASCAL 3D dataset \cite{Xiang14}. The dataset augments PASCAL 2012 images with high quality viewpoint annotations thus is ideal to measure pose estimation. The dataset proposes new metric called Average Viewpoint Precision (AVP) where it measures the area under viewpoint precision and detection recall curve. The viewpoints is measured by azimuth similarity. If the distance between predicted azimuth and ground truth azimuth is below a certain threshold, the viewpoint is correct. Note that the baseline methods (V-DPM, VOC-DPM) reported on the PASCAL 3D dataset are variants of DPM where each component of DPM account for various azimuths. Thus V-DPM and VOC-DPM provide discrete azimuth only whereas our method provides 3D viewpoint (yaw, pitch, roll), CAD instance (model index, rendering, depth) and focal length.
-
-\begin{figure*}[h]
-\setlength\tabcolsep{1pt}
-\centering
-\begin{tabular}{|c|c|c|c|c|}
-   \hline
-  \includegraphics[width=0.24\textwidth]{car_cnn/1a.png} &   
-  \includegraphics[width=0.24\textwidth]{car_cnn/1b.png} &   
-  \includegraphics[width=0.24\textwidth]{car_cnn/1c.png} &   
-  \includegraphics[width=0.24\textwidth]{car_cnn/1d.png}  \\  
-   \hline
-  \includegraphics[width=0.24\textwidth]{car_cnn/2a.png} &   
-  \includegraphics[width=0.24\textwidth]{car_cnn/2b.png} &   
-  \includegraphics[width=0.24\textwidth]{car_cnn/2c.png} &   
-  \includegraphics[width=0.24\textwidth]{car_cnn/2e.png}  \\  
-   \hline
-  \includegraphics[width=0.24\textwidth]{car_cnn/4a.png} &   
-  \includegraphics[width=0.24\textwidth]{car_cnn/4b.png} &   
-  \includegraphics[width=0.24\textwidth]{car_cnn/4c.png} &   
-  \includegraphics[width=0.24\textwidth]{car_cnn/4d.png}  \\  
-%    \hline
-%   \includegraphics[width=0.24\textwidth]{car_cnn/10a.png} &   
-%   \includegraphics[width=0.24\textwidth]{car_cnn/10b.png} &   
-%   \includegraphics[width=0.24\textwidth]{car_cnn/10c.png} &   
-%   \includegraphics[width=0.24\textwidth]{car_cnn/10d.png}  \\  
-%   \hline 
-%   \includegraphics[width=0.24\textwidth]{bicycle_cnn/3a.png} &   
-%   \includegraphics[width=0.24\textwidth]{bicycle_cnn/3b.png} &   
-%   \includegraphics[width=0.24\textwidth]{bicycle_cnn/3c.png} &   
-%   \includegraphics[width=0.24\textwidth]{bicycle_cnn/3d.png}  \\
-  \hline
-  \includegraphics[width=0.24\textwidth]{bicycle_cnn/7a.png} &   
-  \includegraphics[width=0.24\textwidth]{bicycle_cnn/7b.png} &   
-  &\\
-  \hline
-  \includegraphics[width=0.24\textwidth]{bicycle_cnn/4a.png} &   
-  \includegraphics[width=0.24\textwidth]{bicycle_cnn/4b.png} &   
-  \includegraphics[width=0.24\textwidth]{bicycle_cnn/4c.png} &   
-  \includegraphics[width=0.24\textwidth]{bicycle_cnn/4d.png}  \\
-  \hline
-  CNN Proposals & \multicolumn{3}{|c|}{Our matching results on proposal bounding boxes} \\
-  \hline
-\end{tabular}
-\caption{Example enriched bounding boxex. Given R-CNN\cite{Girshick14} detection bounding boxes, our method predicted 2D-3D matching reasonably. On the first column, R-CNN detection bounding boxes overlaid. From the second to the last columns, output of our method given a R-CNN box. Blue boxes are R-CNN output and purle boxes are the tightest bounding box enclosing predicted CAD model}
-  \label{fig:pascal12cnn}
-\end{figure*}
 
 
 \begin{table*}[!htbp]
